# StrandAgentHelloWorld

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: design-document.md  phase1-summary.md
src/: __init__.py  demo_phase1.py  greeting_agent.py
src/agents/: __init__.py  base_agent.py
src/orchestrator/: __init__.py  coordinator.py  workspace.py
src/tools/: __init__.py  github_tools.py
