[project]
name = "strand-agent-hello-world"
version = "0.1.0"
description = "Multi-agent system demonstrating collaborative software development using Strand Agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Debprakash Patnaik", email = "debprakash@gmail.com" }
]
keywords = ["ai", "agents", "multi-agent", "strand-agents", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "strands-agents==1.19.0",
    "strands-agents-tools==0.2.17",
    "PyGithub==2.5.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.75.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/patnaikd/StrandAgentHelloWorld"
Repository = "https://github.com/patnaikd/StrandAgentHelloWorld"
Documentation = "https://github.com/patnaikd/StrandAgentHelloWorld/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]
